package com.yyf.app.ch801;

import com.yyf.app.ch602.ISale;

public interface IFactory {

    ISale createSaleModel();
}
